# HEXI

./: .env  .env.dev  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
hexi/plugins/battlefield2042status/: PlayDataClass.py  __init__.py  bf2042.py  bf_object_dict.py  data.py  data_tools.py  picture_builder.py  picture_tools.py  user_manager.py
hexi/plugins/battlefield2042status/data/: user.db
hexi/plugins/core/: message_handle.py
hexi/plugins/dailywife/: README.md  __init__.py
test/: __init__.py
